[package]
name = "polkahub-deployer"
version = "0.1.0"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
actix-web = "2.0.0"
actix-rt = "1.0.0"
tokio = { version = "0.2.11", features = ["fs", "process"] }
askama = "0.8.0"
reqwest = "0.10.3"
